src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void AlignExposures_Delete(void* self);
extern "C" __declspec(dllexport) void AlignExposures_process_0(void* self, void* src, void* dst, void* times, void* response);
extern "C" __declspec(dllexport) void AlignMTB_Delete(void* self);
extern "C" __declspec(dllexport) void AlignMTB_process_0(void* self, void* src, void* dst, void* times, void* response);
extern "C" __declspec(dllexport) void AlignMTB_process_1(void* self, void* src, void* dst);
extern "C" __declspec(dllexport) cv::Point AlignMTB_calculateShift_0(void* self, void* img0, void* img1);
extern "C" __declspec(dllexport) void AlignMTB_shiftMat_0(void* self, void* src, void* dst, cv::Point shift);
extern "C" __declspec(dllexport) void AlignMTB_computeBitmaps_0(void* self, void* img, void* tb, void* eb);
extern "C" __declspec(dllexport) int AlignMTB_getMaxBits_0(void* self);
extern "C" __declspec(dllexport) void AlignMTB_setMaxBits_0(void* self, int max_bits);
extern "C" __declspec(dllexport) int AlignMTB_getExcludeRange_0(void* self);
extern "C" __declspec(dllexport) void AlignMTB_setExcludeRange_0(void* self, int exclude_range);
extern "C" __declspec(dllexport) bool AlignMTB_getCut_0(void* self);
extern "C" __declspec(dllexport) void AlignMTB_setCut_0(void* self, bool value);
extern "C" __declspec(dllexport) void CalibrateCRF_Delete(void* self);
extern "C" __declspec(dllexport) void CalibrateCRF_process_0(void* self, void* src, void* dst, void* times);
extern "C" __declspec(dllexport) void CalibrateDebevec_Delete(void* self);
extern "C" __declspec(dllexport) float CalibrateDebevec_getLambda_0(void* self);
extern "C" __declspec(dllexport) void CalibrateDebevec_setLambda_0(void* self, float lambda);
extern "C" __declspec(dllexport) int CalibrateDebevec_getSamples_0(void* self);
extern "C" __declspec(dllexport) void CalibrateDebevec_setSamples_0(void* self, int samples);
extern "C" __declspec(dllexport) bool CalibrateDebevec_getRandom_0(void* self);
extern "C" __declspec(dllexport) void CalibrateDebevec_setRandom_0(void* self, bool random);
extern "C" __declspec(dllexport) void CalibrateRobertson_Delete(void* self);
extern "C" __declspec(dllexport) int CalibrateRobertson_getMaxIter_0(void* self);
extern "C" __declspec(dllexport) void CalibrateRobertson_setMaxIter_0(void* self, int max_iter);
extern "C" __declspec(dllexport) float CalibrateRobertson_getThreshold_0(void* self);
extern "C" __declspec(dllexport) void CalibrateRobertson_setThreshold_0(void* self, float threshold);
extern "C" __declspec(dllexport) void* CalibrateRobertson_getRadiance_0(void* self);
extern "C" __declspec(dllexport) void MergeDebevec_Delete(void* self);
extern "C" __declspec(dllexport) void MergeDebevec_process_0(void* self, void* src, void* dst, void* times, void* response);
extern "C" __declspec(dllexport) void MergeDebevec_process_1(void* self, void* src, void* dst, void* times);
extern "C" __declspec(dllexport) void MergeExposures_Delete(void* self);
extern "C" __declspec(dllexport) void MergeExposures_process_0(void* self, void* src, void* dst, void* times, void* response);
extern "C" __declspec(dllexport) void MergeMertens_Delete(void* self);
extern "C" __declspec(dllexport) void MergeMertens_process_0(void* self, void* src, void* dst, void* times, void* response);
extern "C" __declspec(dllexport) void MergeMertens_process_1(void* self, void* src, void* dst);
extern "C" __declspec(dllexport) float MergeMertens_getContrastWeight_0(void* self);
extern "C" __declspec(dllexport) void MergeMertens_setContrastWeight_0(void* self, float contrast_weiht);
extern "C" __declspec(dllexport) float MergeMertens_getSaturationWeight_0(void* self);
extern "C" __declspec(dllexport) void MergeMertens_setSaturationWeight_0(void* self, float saturation_weight);
extern "C" __declspec(dllexport) float MergeMertens_getExposureWeight_0(void* self);
extern "C" __declspec(dllexport) void MergeMertens_setExposureWeight_0(void* self, float exposure_weight);
extern "C" __declspec(dllexport) void MergeRobertson_Delete(void* self);
extern "C" __declspec(dllexport) void MergeRobertson_process_0(void* self, void* src, void* dst, void* times, void* response);
extern "C" __declspec(dllexport) void MergeRobertson_process_1(void* self, void* src, void* dst, void* times);
extern "C" __declspec(dllexport) void Tonemap_Delete(void* self);
extern "C" __declspec(dllexport) void Tonemap_process_0(void* self, void* src, void* dst);
extern "C" __declspec(dllexport) float Tonemap_getGamma_0(void* self);
extern "C" __declspec(dllexport) void Tonemap_setGamma_0(void* self, float gamma);
extern "C" __declspec(dllexport) void TonemapDrago_Delete(void* self);
extern "C" __declspec(dllexport) float TonemapDrago_getSaturation_0(void* self);
extern "C" __declspec(dllexport) void TonemapDrago_setSaturation_0(void* self, float saturation);
extern "C" __declspec(dllexport) float TonemapDrago_getBias_0(void* self);
extern "C" __declspec(dllexport) void TonemapDrago_setBias_0(void* self, float bias);
extern "C" __declspec(dllexport) void TonemapMantiuk_Delete(void* self);
extern "C" __declspec(dllexport) float TonemapMantiuk_getScale_0(void* self);
extern "C" __declspec(dllexport) void TonemapMantiuk_setScale_0(void* self, float scale);
extern "C" __declspec(dllexport) float TonemapMantiuk_getSaturation_0(void* self);
extern "C" __declspec(dllexport) void TonemapMantiuk_setSaturation_0(void* self, float saturation);
extern "C" __declspec(dllexport) void TonemapReinhard_Delete(void* self);
extern "C" __declspec(dllexport) float TonemapReinhard_getIntensity_0(void* self);