src/OpenCV5Sharp/Generated/NativeMethods.Photo.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignExposures_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignExposures_process_0(AlignExposuresHandle self, IntPtr src, IntPtr dst, MatHandle times, MatHandle response);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignMTB_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignMTB_process_0(AlignMTBHandle self, IntPtr src, IntPtr dst, MatHandle times, MatHandle response);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignMTB_process_1(AlignMTBHandle self, IntPtr src, IntPtr dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point AlignMTB_calculateShift_0(AlignMTBHandle self, MatHandle img0, MatHandle img1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignMTB_shiftMat_0(AlignMTBHandle self, MatHandle src, MatHandle dst, Point shift);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignMTB_computeBitmaps_0(AlignMTBHandle self, MatHandle img, MatHandle tb, MatHandle eb);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int AlignMTB_getMaxBits_0(AlignMTBHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignMTB_setMaxBits_0(AlignMTBHandle self, int max_bits);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int AlignMTB_getExcludeRange_0(AlignMTBHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignMTB_setExcludeRange_0(AlignMTBHandle self, int exclude_range);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool AlignMTB_getCut_0(AlignMTBHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AlignMTB_setCut_0(AlignMTBHandle self, [MarshalAs(UnmanagedType.U1)] bool value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateCRF_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateCRF_process_0(CalibrateCRFHandle self, IntPtr src, MatHandle dst, MatHandle times);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateDebevec_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CalibrateDebevec_getLambda_0(CalibrateDebevecHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateDebevec_setLambda_0(CalibrateDebevecHandle self, float lambda);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CalibrateDebevec_getSamples_0(CalibrateDebevecHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateDebevec_setSamples_0(CalibrateDebevecHandle self, int samples);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool CalibrateDebevec_getRandom_0(CalibrateDebevecHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateDebevec_setRandom_0(CalibrateDebevecHandle self, [MarshalAs(UnmanagedType.U1)] bool random);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateRobertson_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CalibrateRobertson_getMaxIter_0(CalibrateRobertsonHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateRobertson_setMaxIter_0(CalibrateRobertsonHandle self, int max_iter);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float CalibrateRobertson_getThreshold_0(CalibrateRobertsonHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CalibrateRobertson_setThreshold_0(CalibrateRobertsonHandle self, float threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr CalibrateRobertson_getRadiance_0(CalibrateRobertsonHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeDebevec_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeDebevec_process_0(MergeDebevecHandle self, IntPtr src, MatHandle dst, MatHandle times, MatHandle response);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeDebevec_process_1(MergeDebevecHandle self, IntPtr src, MatHandle dst, MatHandle times);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeExposures_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeExposures_process_0(MergeExposuresHandle self, IntPtr src, MatHandle dst, MatHandle times, MatHandle response);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeMertens_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeMertens_process_0(MergeMertensHandle self, IntPtr src, MatHandle dst, MatHandle times, MatHandle response);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeMertens_process_1(MergeMertensHandle self, IntPtr src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float MergeMertens_getContrastWeight_0(MergeMertensHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeMertens_setContrastWeight_0(MergeMertensHandle self, float contrast_weiht);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float MergeMertens_getSaturationWeight_0(MergeMertensHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeMertens_setSaturationWeight_0(MergeMertensHandle self, float saturation_weight);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float MergeMertens_getExposureWeight_0(MergeMertensHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeMertens_setExposureWeight_0(MergeMertensHandle self, float exposure_weight);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeRobertson_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeRobertson_process_0(MergeRobertsonHandle self, IntPtr src, MatHandle dst, MatHandle times, MatHandle response);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MergeRobertson_process_1(MergeRobertsonHandle self, IntPtr src, MatHandle dst, MatHandle times);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Tonemap_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Tonemap_process_0(TonemapHandle self, MatHandle src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float Tonemap_getGamma_0(TonemapHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Tonemap_setGamma_0(TonemapHandle self, float gamma);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapDrago_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TonemapDrago_getSaturation_0(TonemapDragoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapDrago_setSaturation_0(TonemapDragoHandle self, float saturation);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TonemapDrago_getBias_0(TonemapDragoHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapDrago_setBias_0(TonemapDragoHandle self, float bias);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapMantiuk_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TonemapMantiuk_getScale_0(TonemapMantiukHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapMantiuk_setScale_0(TonemapMantiukHandle self, float scale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TonemapMantiuk_getSaturation_0(TonemapMantiukHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapMantiuk_setSaturation_0(TonemapMantiukHandle self, float saturation);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TonemapReinhard_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TonemapReinhard_getIntensity_0(TonemapReinhardHandle self);
